# ledcat

./: Makefile.am  NEWS  README  README.md  configure.ac
contrib/: Makefile.am  img2gray.sh  img2rgb.sh  mencoder_gray.sh  mencoder_rgb.sh  scroll.sh
debian/: README.Debian  README.source  changelog  control.tmpl.in  copyright
gentoo/app-misc/ledcat/: ledcat-9999.ebuild.in
gentoo/media-gfx/ledcat/: ledcat-9999.ebuild.in  metadata.xml
src/: Makefile.am  cache.c  cache.h  ledcat.c  ledcat.h  magick.c  magick.h  raw.c  raw.h  version.c.in  version.h
